[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
flate2 = "1.0.27"
sha1 = "0.10.6"
tempfile = "3.8.0"
time = { version = "0.3.29", features = ["local-offset"] }
tui = "0.19.0"
